[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["Alexey Grazhdankin <alex.alexxx56@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_4"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
